expmanded oauth implementation to usetrs, favorites and reviews, fisued users routes and controllers to work with oauth, updated swagger
